Mobile z-index issue with extensions fix

--- a/src/js/extensions/tasks/components/task.component.css
+++ b/src/js/extensions/tasks/components/task.component.css
@@ -49,7 +49,10 @@
 
 @media only screen and (max-width: 768px) {
   .tasks-extension .tasks .task input,
-  .tasks-extension .tasks .task textarea {
+  .tasks-extension .tasks .task input.title,
+  .tasks-extension .tasks .task textarea,
+  .tasks-extension .tasks .task textarea.title {
     font-size: 16px;
+    height: 20px;
   }
 }
